rust-glib-macros (0.21.2-2) UNRELEASED-FIXME-AUTOGENERATED-DEBCARGO; urgency=medium

  * Package glib-macros 0.21.2 from crates.io using debcargo 2.7.10
  * Stop patching heck and syn

 -- Matthias Geiger <werdahias@debian.org>  Thu, 25 Sep 2025 15:56:58 +0200

rust-glib-macros (0.21.2-1) unstable; urgency=medium

  * Team upload
  * Package glib-macros 0.21.2 from crates.io using debcargo 2.7.10

 -- Jeremy Bícha <jbicha@ubuntu.com>  Thu, 18 Sep 2025 11:48:29 -0400

rust-glib-macros (0.21.0-2) unstable; urgency=medium

  * Team upload
  * Package glib-macros 0.21.0 from crates.io using debcargo 2.7.10
  * Upload to unstable

 -- Jeremy Bícha <jbicha@ubuntu.com>  Sat, 06 Sep 2025 16:43:18 -0400

rust-glib-macros (0.21.0-1) experimental; urgency=medium

  * Package glib-macros 0.21.0 from crates.io using debcargo 2.7.8
  * Refresh patches

 -- Matthias Geiger <werdahias@debian.org>  Mon, 28 Jul 2025 21:06:02 +0200

rust-glib-macros (0.20.7-1) unstable; urgency=medium

  * Package glib-macros 0.20.7 from crates.io using debcargo 2.7.5

 -- Matthias Geiger <werdahias@debian.org>  Wed, 25 Dec 2024 20:42:49 +0100

rust-glib-macros (0.20.5-1) unstable; urgency=medium

  * Package glib-macros 0.20.5 from crates.io using debcargo 2.7.2
  * Drop force-newer-glib patch; applied upstream

 -- Matthias Geiger <werdahias@debian.org>  Wed, 30 Oct 2024 16:58:13 +0100

rust-glib-macros (0.20.4-1) unstable; urgency=medium

  * Package glib-macros 0.20.4 from crates.io using debcargo 2.7.0
  * Add patch to force tests to be run against glib 0.20.4

 -- Matthias Geiger <werdahias@debian.org>  Tue, 01 Oct 2024 20:12:56 +0200

rust-glib-macros (0.20.3-1) unstable; urgency=medium

  * Team upload
  * Package glib-macros 0.20.3 from crates.io using debcargo 2.6.1

 -- Jeremy Bícha <jbicha@ubuntu.com>  Mon, 16 Sep 2024 16:00:21 -0400

rust-glib-macros (0.20.2-1) unstable; urgency=medium

  * Team upload
  * Package glib-macros 0.20.2 from crates.io using debcargo 2.6.1
