@@ -1,7 +1,11 @@
 --- a/Cargo.toml
 +++ b/Cargo.toml
-@@ -76,7 +76,7 @@
- version = "0.5"
+@@ -73,10 +73,10 @@
+ path = "tests/value_delegate_derive.rs"
+ 
+ [dependencies.heck]
+-version = "0.5"
++version = ">= 0.4, < 0.6"
  
  [dependencies.proc-macro-crate]
 -version = "3.3"
