@@ -1,9 +1,15 @@
 rust-glib-macros (0.21.2-2) UNRELEASED-FIXME-AUTOGENERATED-DEBCARGO; urgency=medium
 
-  * Package glib-macros 0.21.2 from crates.io using debcargo 2.7.10
-  * Stop patching heck and syn
+  * Team upload.
+  * Package glib-macros 0.21.2 from crates.io using debcargo 2.7.11
 
- -- Matthias Geiger <werdahias@debian.org>  Thu, 25 Sep 2025 15:56:58 +0200
+  [ Matthias Geiger ]
+  * Stop patching syn
+
+  [ James McCoy ]
+  * Allow building with heck 0.4 or 0.5
+
+ -- James McCoy <jamessan@debian.org>  Sat, 11 Oct 2025 14:35:32 -0400
 
 rust-glib-macros (0.21.2-1) unstable; urgency=medium
 
